moves some logic to viewModels, adds constants files, small refactor

--- a/ukraine/Localization/uk.lproj/Localizable.strings
+++ b/ukraine/Localization/uk.lproj/Localizable.strings
@@ -39,3 +39,10 @@
 // TabBar
 "for_ukrainians" = "Для українців";
 "for_swedes" = "Для шведів";
+
+// About text
+"about_text" = "
+For Ukrainians is authored by Victor Gustafsson as a final project at IT-Högskolan in Gothenburg. The app wouldn't been possible without help from Yuliia Kyzyk.
+As a Swedish citizen, we often take for granted all the instituions a refugee, immigrant or asylum seeker has to go through. This was something that my girlfriend Yuliia shined a light on, and when I got the opportunity to develop an app as a final project before my graduation I knew what to do.
+ The app gathers all the most useful links that can be helpful in one place.
+ ";
